templates/mathoid_template.yaml
---
# Source: mathoid/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mathoid-release-name
  labels:
    app: mathoid
    chart: mathoid-0.2.2
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: mathoid
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 10044
        protocol: TCP
---
# Source: mathoid/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mathoid-release-name
  labels:
    app: mathoid
    chart: mathoid-0.2.2
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: mathoid
    release: release-name
    routed_via: release-name
  ports:
  - name: http
    protocol: TCP
    port: 10044
---
# Source: mathoid/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mathoid-release-name
  labels:
    app: mathoid
    chart: mathoid-0.2.2
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: mathoid
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: mathoid
        release: release-name
        routed_via: release-name
      annotations:
        checksum/config: 24eec11dbff7107c5d675da88bf3bebba63a42cde24bef45575f76cc032ba0fe
        prometheus.io/scrape: "false"
                
    spec:
      containers:
        # The main application container
        - name: mathoid-release-name
          image: "docker-registry.wikimedia.org/repos/mediawiki/services/mathoid:latest"
          command: ["node"]
          args: ["server.js", "-c", "/etc/mathoid/config.yaml"]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10044
          livenessProbe:
            tcpSocket:
              port: 10044
          readinessProbe:
            httpGet:
              path: /_info
              port: 10044
          volumeMounts:
            - name: config-volume
              mountPath: /etc/mathoid
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 1
              memory: 1Gi          
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
               drop:
               - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault        
      volumes:
        
        - name: config-volume
          configMap:
            name: config-release-name
---
# Source: mathoid/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'mathoid-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'mathoid-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(MATHOID_RELEASE_NAME_SERVICE_HOST)', 'http://mathoid-release-name:10044']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
